<resources>
    <string name="app_name">Android project</string>
    <string name="title_create_account">Create your Google Account</string>
    <string name="action_sign_in_instead">Sign in instead</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_username">Username</string>
    <string name="helper_username">You can use letters, numbers &amp; periods</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="helper_password">Use 8 or more characters with a mix of letters, numbers &amp; symbols</string>
    <string name="btn_next">Next</string>
    <string name="legal_text">By clicking Next, you agree to the Terms of Service and acknowledge the Privacy Policy.</string>
    <string name="title_sign_in">Sign in</string>
    <string name="subtitle_use_your_account">Use your username to sign in</string>
    <string name="hint_email_or_phone">Email or phone</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_create_account">Create account</string>
    <string name="action_sign_in">Next</string>
    <string name="add_a_profile_photo_optional">Add a profile photo (optional)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_in_mail">Search in mail</string>
    <string name="compose_btn">compose</string>
    <string name="user_labels_header">Labels</string>
    <string name="create_new_label">Create new label</string>
    <string name="label_name">Label name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="error_required">Required</string>
    <string name="error_too_long">Too long (max 30)</string>
    <string name="error_system_label">Cannot use system label name</string>
    <string name="error_label_exists">Label already exists</string>
    <string name="edit_label">Edit label</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="menu_button">menu-button</string>
    <string name="manage_labels">Manage labels</string>
    <string name="user_settings">user settings</string>
    <string name="logout">Logout</string>
    <string name="this_email_is_marked_as_spam">This email is marked as spam</string>
    <string name="delete_description">Delete</string>
    <string name="save_draft">Save draft</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
</resources>